tests/lean/attributes.lean.expected.out
attributes.lean:6:0: error: cannot remove attribute [reducible]
attributes.lean:10:0: error: cannot remove attribute [instance]
